--- a/LenesKlinik.Core/LenesKlinik.Core.csproj
+++ b/LenesKlinik.Core/LenesKlinik.Core.csproj
@@ -5,8 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="ApplicationServices\Implementation\" />
-    <Folder Include="DomainServices\" />
+    <ProjectReference Include="..\LenesKlinik.Core.Entities\LenesKlinik.Core.Entities.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.EntityFrameworkCore">
+      <HintPath>..\..\..\..\.nuget\packages\microsoft.entityframeworkcore\2.1.4\lib\netstandard2.0\Microsoft.EntityFrameworkCore.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
