--- a/LenesKlinik.Data/LenesKlinik.Data.csproj
+++ b/LenesKlinik.Data/LenesKlinik.Data.csproj
@@ -5,14 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="2.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LenesKlinik.Core.Entities\LenesKlinik.Core.Entities.csproj" />
+    <ProjectReference Include="..\LenesKlinik.Core\LenesKlinik.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
