--- a/WorkTest/WorkTest.csproj
+++ b/WorkTest/WorkTest.csproj
@@ -8,8 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
+    <PackageReference Include="Moq" Version="4.10.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LenesKlinik.Core.Entities\LenesKlinik.Core.Entities.csproj" />
+    <ProjectReference Include="..\LenesKlinik.Core\LenesKlinik.Core.csproj" />
+    <ProjectReference Include="..\LenesKlinik.Data\LenesKlinik.Data.csproj" />
   </ItemGroup>
 
 </Project>
