--- a/LenesKlinik.Data/LenesKlinik.Data.csproj
+++ b/LenesKlinik.Data/LenesKlinik.Data.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="2.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.6" />
@@ -12,7 +13,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LenesKlinik.Core.Entities\LenesKlinik.Core.Entities.csproj" />
     <ProjectReference Include="..\LenesKlinik.Core\LenesKlinik.Core.csproj" />
   </ItemGroup>
 
